# open-graph-image-generator

./: .dockerignore  .env.example  README.md  alembic.ini  pyproject.toml
.cursor/rules/: english-language.mdc  env-var-config.mdc  no-trivial-comments.mdc  type-hinting.mdc
alembic/: env.py
alembic/versions/: 9763c38ae3b9_create_screenshots_table.py
app/: app_setup.py  celery_app.py  config.py  database.py  logger.py  main.py  templating.py
app/api/: __init__.py  crud.py  endpoints.py  utils.py
app/models/: __init__.py  api_models.py  db_models.py
app/services/: __init__.py  cache.py  screenshot.py  storage.py
app/tasks/: __init__.py  screenshot.py
docker/: Dockerfile  docker-entrypoint.sh
templates/: index.html
